--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,7 @@ jobs:
     strategy:
       matrix:
         python-version: [3.7, 3.8, 3.9]
+        django: [ ~2.2, ~3.1, ~3.2]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -24,6 +25,7 @@ jobs:
     - name: Install dependencies
       run: |
         pip install -U -r requirements.txt
+        pip install -U django==${{ matrix.django }}
     - name: Run tests
       run: |
         scripts/test
