--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,13 +2,14 @@ name: Test
 
 on: [push]
 
+
 jobs:
   test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [3.7, 3.8, 3.9]
-        django: [~3.0.13, ~3.1.7, ~3.2]
+        django: [">=3.0,<3.1", ">=3.1,<3.2", ">=3.2"]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -25,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         pip install -U -r requirements.txt
-        pip install -U django==${{ matrix.django }}
+        pip install -U 'django${{ matrix.django }}'
     - name: Run tests
       run: |
         scripts/test
