--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,10 +27,7 @@ jobs:
         pip install -U pip poetry
         poetry config --local virtualenvs.in-project true
         poetry install
-        poetry run ./bin/test
-    - name: Lint and run test
+    - name: Lint and test
       run: |
         bin/lint
         bin/test
-    - name: Run codecov
-      run: codecov
