Use poetry for dev dependencies, replace test scripts (#34)
* Update dev deps, use poetry, test and linting scripts, blackify files

* Django, pydantic, and test deps to TOML

* Flake8 linting, update sublime project for linter paths

* Add coverage report using pytest

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,6 @@ name: Test
 
 on: [push]
 
-
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -25,10 +24,10 @@ jobs:
           ${{ runner.os }}-pip-
     - name: Install dependencies
       run: |
-        pip install -U -r requirements.txt
-        pip install -U 'django${{ matrix.django }}'
-    - name: Run tests
+        pip install -U pip poetry
+        poetry config --local virtualenvs.in-project true
+        poetry install
+    - name: Lint and test
       run: |
-        scripts/test
-    - name: Run codecov
-      run: codecov
+        bin/lint
+        bin/test
