--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,61 @@
 [flake8]
 max-line-length = 88
 ignore = E203, W503
+exclude =
+  .git
+  .venv
+  __pycache__
+  .eggs
+  *.egg
+  settings.py
 
 [mypy]
-disallow_untyped_defs = True
+disallow_any_generics = True
+disallow_any_explicit = True
+allow_redefinition = False
+check_untyped_defs = True
+disallow_untyped_decorators = False
 disallow_untyped_calls = True
-disallow_incomplete_defs = True
-disallow_untyped_decorators = True
+ignore_errors = False
 ignore_missing_imports = True
+implicit_reexport = False
+local_partial_types = True
+strict_optional = True
+strict_equality = True
+no_implicit_optional = True
+warn_unused_ignores = True
+warn_redundant_casts = True
+warn_unused_configs = True
+warn_unreachable = True
+warn_no_return = True
+
+
+[tool:pytest]
+DJANGO_SETTINGS_MODULE = tests.testapp.settings
+norecursedirs = 
+    data
+    static
+    node_modules
+    bin
+    dist
+    build
+    docs
+    .mypy_cache
+    .pytest_cache
+    .secret
+    .txt
+    .idea 
+    .git
+    .venv
+    *.egg
+    .eggs
+    .git
+    .github
+    .poetry
+    __pycache__
+
+addopts = -v
+          --durations=10
+          -p no:logging
+          -s
+          --ignore .venv
