Add bump2version config and dependency
Fix bump2version config

Fix bump2version config

bump2version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ pyls-flake8 = "^0.4.0"
 django-stubs = "^1.8.0"
 pytest-django = "^4.4.0"
 psycopg2 = "^2.9.1"
+bump2version = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
