--- a/tox.ini
+++ b/tox.ini
@@ -2,9 +2,9 @@
 isolated_build = True
 envlist =
     py37-django{30,31,32}
-    py38-django{30,31,32,40}
-    py39-django{30,31,32,40}
-    py310-django{32,40}
+    py38-django{30,31,32}
+    py39-django{30,31,32}
+    py310-django{32}
 
 [gh-actions]
 python =
@@ -14,7 +14,16 @@ python =
     3.10: py310
 
 [testenv]
-commands = 
-    poetry install
-    poetry run ./bin/test
-allowlist_externals = poetry
+deps =
+    pytest
+    pytest-cov
+    pytest-django
+    coverage
+    psycopg2
+    django30: Django>=3.0,<3.1
+    django31: Django>=3.1,<3.2
+    django32: Django>=3.2,<4.0
+setenv =
+    PYTHONPATH = {toxinidir}
+commands =  
+    python -m pytest -vv --cov=djantic --cov-fail-under=100 --cov-report=term-missing {posargs}
