Simplify from_django by relying in Pydantic. Add multiple level relationship support.

--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,7 @@ deps =
     django30: Django>=3.0,<3.1
     django31: Django>=3.1,<3.2
     django32: Django>=3.2,<4.0
+    factory-boy
 setenv =
     PYTHONPATH = {toxinidir}
 commands =  
