Accept coverage less than 100

--- a/tox.ini
+++ b/tox.ini
@@ -29,4 +29,4 @@ deps =
 setenv =
     PYTHONPATH = {toxinidir}
 commands =
-    python -m pytest -vv --cov=djantic --cov-fail-under=100 --cov-report=term-missing {posargs}
+    python -m pytest -vv --cov=djantic --cov-report=term-missing {posargs}
